deploy_nlb_server.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mongodb
  name: server-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-0475259f3d0bd2d2d, subnet-00f9e724794d434b6, subnet-0e2622b568024ccf8   # specifying the public subnets id
spec:
  type: LoadBalancer
  ports:
    - port: 5200
      protocol: TCP
      targetPort: 5200
      name: server
  selector:
    app: server
