ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: mongodb
  name: ingress-client
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip # using IP routing policy of ALB
    alb.ingress.kubernetes.io/subnets: subnet-0475259f3d0bd2d2d, subnet-00f9e724794d434b6, subnet-0e2622b568024ccf8 # specifying the public subnets id
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service # refer to the service defined in deploy_client.yaml
                port:
                  number: 8080
